Bug 167976 - Systray icon shouldn't animate for existing chat windows
Summary: Systray icon shouldn't animate for existing chat windows
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-01 12:33 UTC by Torquil Macdonald Sørensen
Modified: 2008-10-14 23:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Torquil Macdonald Sørensen 2008-08-01 12:33:40 UTC
Version:           0.50.80 (using 4.1.00 (KDE 4.1.0), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.25-2-686

I think this must have changed from KDE3 to KDE4 (the KDE3 behaviour was better):

When I have an open chat window that is unfocused/minimized, then the systray icon becomes animated when I receive a message in that chat window.

I do not want a notification for chats that already have a window, regardless of whether they are unfocused or minimized (like I had with KDE3).

I have tried "Treat all chats on the current desktop like active chats", but that does not affect this. 

If it could be configurable to have this animation if the window exists, that would be the best solution. Or am I overlooking some configuration setting?

Best regards,
Torquil Sørensen
Comment 1 Torquil Macdonald Sørensen 2008-08-01 13:00:13 UTC
Btw, this goes for the flashing envelope in the contact list also.
Comment 2 Jon Cochran 2008-09-05 00:51:14 UTC
I'll second this, the behaviour change from KDE3 to KDE4 for this makes no sense...   if I have a chat open, marking the taskbar entry should be enough, I don't need to see the tray icon flash on every message.

If it were a seperate option, that would be fine too.  
Comment 3 sid vicious 2008-10-14 14:44:36 UTC
Same behaviour noted with KDE 4.1.2.

Please take us back to the old behaviour.
Comment 4 Roman Jarosz 2008-10-14 22:47:01 UTC
SVN commit 871405 by rjarosz:

Fix bug 167976: Systray icon shouldn't animate for existing chat windows.

BUG: 167976



 M  +27 -38    kopete/config/behavior/behaviorconfig_events.ui  
 M  +4 -0      libkopete/kopetebehaviorsettings.kcfg  
 M  +2 -1      libkopete/private/kopeteviewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=871405
Comment 5 Roman Jarosz 2008-10-14 23:11:02 UTC
SVN commit 871414 by rjarosz:

Backport part of commit 871405.
Fix bug 167976: Systray icon shouldn't animate for existing chat windows.

As we cannot change GUI in KDE 4.1 you have to add/change

[Behavior]
animateOnMessageWithOpenChat=false

in ~/.kde/share/config/kopeterc file to make it behave as in KDE 3.

CCBUG: 167976



 M  +4 -0      kopetebehaviorsettings.kcfg  
 M  +2 -1      private/kopeteviewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=871414