Fix bug 167976: Systray icon shouldn't animate for existing chat windows.

BUG: 167976


svn path=/trunk/KDE/kdenetwork/kopete/; revision=871405